<resources>
    <string name="action_add">Add</string>
    <string name="action_add_source">Add Source</string>
    <string name="action_add_zone">Add Zone</string>
    <string name="action_all_off">Turn all off</string>
    <string name="action_all_on">Turn all on</string>
    <string name="action_change_server">Change Controller</string>
    <string name="action_create">Create</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_source">Delete Source</string>
    <string name="action_delete_zone">Delete Zone</string>
    <string name="action_enter_ip">Manually enter address…</string>
    <string name="action_manage_sources">Manage Sources</string>
    <string name="action_power_all">All On/Off</string>
    <string name="action_rename">Rename</string>
    <string name="action_toggle_mute">Toggle Mute</string>
    <string name="action_update">Update</string>
    <string name="activity_name_manage_sources">Manage Sources</string>
    <string name="activity_name_source_settings">Source Settings</string>
    <string name="activity_name_zone">Zone</string>
    <string name="activity_name_zone_settings">Zone Settings</string>
    <string name="app_name">RNet Remote</string>
    <string name="app_name_short">RNet</string>
    <string name="confirm_delete_zone">Are you sure you want to delete this zone?</string>
    <string name="description_select_source">Select Source</string>
    <string name="description_zone_settings">Zone Settings</string>
    <string name="dialog_change_server">Select Controller</string>
    <string name="dialog_enter_server">Enter Controller Address</string>
    <string name="dialog_select_source">Select %s Source</string>
    <string name="enabled">Enabled</string>
    <string name="error_connect">Couldn\'t connect to controller.</string>
    <string name="error_empty_controller_id">Enter controller #</string>
    <string name="error_empty_source_id">Enter source #</string>
    <string name="error_empty_source_name">Enter a source name</string>
    <string name="error_empty_zone_id">Enter zone #</string>
    <string name="error_empty_zone_name">Enter a zone name</string>
    <string name="error_id_range">Value must be 1–99</string>
    <string name="error_invalid_hostname">Hostname not found</string>
    <string name="error_invalid_hostname_port">Invalid hostname:port</string>
    <string name="error_invalid_port">Invalid port</string>
    <string name="error_long_source_name">Source name is too long</string>
    <string name="error_long_zone_name">Zone name is too long</string>
    <string name="error_source_exists">A source with that ID already exists.</string>
    <string name="error_zone_exists">A zone with that ID already exists.</string>
    <string name="format_zone_id">Controller #%1$d Zone #%2$d</string>
    <string name="format_source_id">Source #%1$d</string>
    <string name="format_object_settings">%1$s Settings</string>
    <string name="label_about">About</string>
    <string name="label_auto_off">Trigger Zones Off</string>
    <string name="label_auto_off_desc">Turn off zones playing this source when playback stops</string>
    <string name="label_auto_on">Trigger Zones On</string>
    <string name="label_balance">Balance</string>
    <string name="label_bass">Bass</string>
    <string name="label_controller_num">Controller #</string>
    <string name="label_do_not_disturb">Do Not Disturb</string>
    <string name="label_ip_address">Address</string>
    <string name="label_loudness">Loudness</string>
    <string name="label_max_volume">Maximum Volume</string>
    <string name="label_party_mode">Party Mode</string>
    <string name="label_preference_disconnected"><![CDATA[<disconnected>]]></string>
    <string name="label_source_id">Source ID</string>
    <string name="label_source_name">Source Name</string>
    <string name="label_source_name_override">Override Source Name</string>
    <string name="label_source_name_override_desc">Display above name on keypads</string>
    <string name="label_source_type">Source Type</string>
    <string name="label_treble">Treble</string>
    <string name="label_turn_on_volume">Turn On Volume</string>
    <string name="label_zone_id">Zone ID</string>
    <string name="label_zone_name">Zone Name</string>
    <string name="label_zone_num">Zone #</string>
    <string name="notice_searching_links">Scanning for controllers…</string>
    <string name="notice_serial_disconnected">No serial connection. The unit could be off.</string>
    <string name="notice_verifying_server">Verifying controller…</string>
    <string name="notification_channel_activity">Background Activity</string>
    <string name="notification_channel_activity_desc">Notification of operations running in the background.</string>
    <string name="notification_sending_command">Sending command…</string>
    <string name="permission_error_phone">Since you\'ve denied this app\'s access to your phone\'s call state, automatically muting RNet when you make or receive calls is not possible.</string>
    <string name="permission_explanation_phone">In order to mute RNet when you make or receive calls, you will have to permit this app to see your phone\'s current call state.</string>
    <string name="placeholder">placeholder</string>
    <string name="proxy_update_available">Controller Update Available</string>
    <string name="proxy_update_available_desc">Version %s is available for the controller you are currently connected to.</string>
    <string name="proxy_update_started">Update Started</string>
    <string name="proxy_update_started_desc">The controller proxy will restart when the update has completed.</string>
    <string name="setting_about_app_version">Application version</string>
    <string name="setting_about_server_address">Controller address</string>
    <string name="setting_about_server_version">Controller version</string>
    <string name="setting_controller_web_server">Enable web hooks</string>
    <string name="setting_controller_web_server_desc">Used for IFFT</string>
    <string name="setting_mute_during_call">Mute during call</string>
    <string name="setting_mute_during_call_desc">Mute entire system during a phone call</string>
    <string name="setting_mute_on_ring">Mute on ring</string>
    <string name="setting_mute_on_ring_desc">Mute entire system when the phone is ringing</string>
    <string name="setting_value_master">Master</string>
    <string name="setting_value_off">Off</string>
    <string name="setting_value_on">On</string>
    <string name="setting_volume_keys">Use volume keys</string>
    <string name="setting_volume_keys_desc">Use volume keys to control the volume of all zones while in the app</string>
    <string name="settings">Settings</string>
    <string name="settings_category_controller">Controller</string>
    <string name="settings_category_phone">Phone Calls</string>
    <string name="settings_controller_name">Controller name</string>
    <string name="shortcut_all_off">All Off</string>
    <string name="shortcut_all_off_long">Turn all zones off</string>
    <string name="shortcut_all_on">All On</string>
    <string name="shortcut_all_on_long">Turn all zones on</string>
    <string name="shortcut_toggle_mute">Toggle mute</string>
    <string name="toast_all_zones_off">All zones turned off</string>
    <string name="toast_all_zones_on">All zones turned on</string>
    <string name="toast_connect_error">Unable to connect to RNet controller</string>
    <string name="toast_system_mute_toggled">Toggled mute</string>
    <string name="toast_system_muted">Muted</string>
    <string name="toast_system_unmuted">Unmuted</string>
    <string name="active">Active</string>
    <string name="disabled">Disabled</string>
    <string name="setting_zone_item_art">Card artwork</string>
    <string name="setting_zone_item_art_desc">Show media artwork on zone cards</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="error_licenses">An error occurred while opening the licenses.</string>
</resources>
