<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/card_margin"
                                    android:layout_marginRight="@dimen/card_margin"
                                    android:layout_marginTop="@dimen/card_margin"
                                    card_view:cardBackgroundColor="@color/colorCard">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingBottom="@dimen/card_content_padding_bottom"
                android:paddingEnd="@dimen/card_content_padding"
                android:paddingLeft="@dimen/card_content_padding_bottom"
                android:paddingRight="@dimen/card_content_padding"
                android:paddingStart="@dimen/card_content_padding_bottom"
                android:paddingTop="@dimen/card_content_padding_bottom"
                android:singleLine="true"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary"/>

            <ImageButton
                android:id="@+id/power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_icon_button_spacing"
                android:layout_marginRight="@dimen/card_icon_button_spacing"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_toggle_power"
                android:padding="@dimen/card_icon_button_padding"
                android:tint="@color/colorCardButton"
                card_view:srcCompat="@drawable/ic_power_settings_white_24dp"
                tools:visible="false"/>

            <ImageButton
                android:id="@+id/source_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_icon_button_spacing"
                android:layout_marginRight="@dimen/card_icon_button_spacing"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_select_source"
                android:padding="@dimen/card_icon_button_padding"
                android:tint="@color/colorCardButton"
                card_view:srcCompat="@drawable/ic_input_white_24dp"
                tools:visible="false"/>

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_icon_button_edge_margin"
                android:layout_marginRight="@dimen/card_icon_button_edge_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_zone_settings"
                android:padding="@dimen/card_icon_button_padding"
                android:tint="@color/colorCardButton"
                card_view:srcCompat="@drawable/ic_tune_black_24dp"
                app:srcCompat="@drawable/ic_tune_white_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorCardDivider"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_action_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_content_padding"
                android:layout_marginStart="@dimen/card_content_padding"
                android:contentDescription="@null"
                android:tint="@color/textColorSecondary"
                app:srcCompat="@drawable/ic_volume_up_white_24dp"/>

            <SeekBar
                android:id="@+id/volume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/card_content_padding"
                android:layout_marginRight="@dimen/card_content_padding"
                android:layout_weight="1"
                android:max="50"
                android:maxHeight="1000dp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
